2005-11-29  Tim Omernick  <timo@apple.com>

        Reviewed by John Sullivan, Eric Seidel

	<rdar://problem/4340787> Safari & Dashcode create 2 instances of the QC plug-in
	
        * WebView.subproj/WebFrameView.m:
        (-[WebFrameView _makeDocumentViewForDataSource:]):
	Instead of creating a new WebDocumentView, use the WebDataSource's representation if it is a WebDocumentView
	of the appropriate class.  Right now, this can only happen when the loading document is a standalone WebKit
	plugin, because WebPluginDocumentView is both the WebDocumentView and the WebDocumentRepresentation for that
	kind of page load.
	
	I have verified that this does not affect other kinds of page loads; in all other cases, the representation
	class is distinct from the document view class.

	I talked with Chris Blumenberg about this change (he knows this code), and he agreed that this is the right
	approach.

2005-11-28  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin. Committed by Maciej.

	- fixed "Word completion doesn't work at end of word (unless last word)"
	(http://bugzilla.opendarwin.org/show_bug.cgi?id=4062)

        * WebView.subproj/WebHTMLView.m:
        (-[WebTextCompleteController doCompletion]):

2005-11-28  John Sullivan  <sullivan@apple.com>

        Reviewed by Tim Omernick.
        
        Probable fix for <rdar://problem/4356060> crash in -[WebHistoryItem _mergeAutoCompleteHints:]

        * History.subproj/WebHistory.m:
        (-[WebHistoryPrivate addItem:]):
        retain/release oldEntry until we're done with it, since removing it from dictionary might
        cause it to be dealloc'ed otherwise.
        
        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem _mergeAutoCompleteHints:]):
        added an assert

2005-11-26  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by mjs.  Committed by eseidel.

        Fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=5230